# stem

./: .gitignore  .gitmodules  .repos  Dockerfile  docker_build.sh  docker_run.sh  readme.md  requirements.txt  setup.sh  setup_paths.bash
.devcontainer/: Dockerfile  devcontainer.json
common_msgs/: CMakeLists.txt  package.xml
docs/: debugging.md
launch/: main.launch
minimal/: CMakeLists.txt  package.xml
minimal/include/minimal/: test_depth.h
minimal/launch/: map_ros.launch
minimal/src/: test.cpp  test_depth.cpp
planner/: CMakeLists.txt  package.xml  setup.py
planner/config/: racer.yaml  thesis.rviz
planner/launch/: fuel.launch  planner.launch  racer.launch  teleop.launch
planner/scripts/planner/: base_interface.py
planner/src/: attention_map.py  attention_processor.cpp  drone_teleop.py  racer_if.py
results/: ablation_planning_stats.py  ablation_vpt.py  ablation_vpt_stats.py  comparison_stats.py  plotting.py  utils.py
results/data/cave/: ablation_planning_cave_tiv.eps  ablation_planning_cave_wig.eps  ablation_vpt_cave_tiv.eps  ablation_vpt_cave_wig.eps  comparison_cave_tiv.eps  comparison_cave_wig.eps
results/data/earthquake/: Figure_1.eps  ablation_planning_earthquake_tiv.eps  ablation_planning_earthquake_wig.eps  ablation_vpt_earthquake_tiv.eps  ablation_vpt_earthquake_wig.eps  comparison_earthquake_tiv.eps  comparison_earthquake_wig.eps
simulator/: CMakeLists.txt  package.xml
simulator/launch/: simulator.launch
simulator/src/: fake_localization.cpp  test.py
sw/bringup/: fake_fuel.launch  fuel.launch  main.launch  package.xml  replay.launch  rviz.launch  sim.launch
sw/bringup/config/: amrlab.yaml  cave.yaml  default_params.yaml  earthquake.yaml  earthquake_vsep.yaml  fuel_algo.yaml  fuel_default.yaml  fuel_px4_interface.yaml  params.yaml  pretty.rviz  px4_interface.yaml  sim.rviz  urban.yaml
sw/bringup/data/: cmd.csv  (+3 more)
sw/common/: CMakeLists.txt  package.xml
sw/common_msgs/: CMakeLists.txt
sw/metrics/: CMakeLists.txt  package.xml
sw/minimal/: CMakeLists.txt
sw/planning/: solve_prio_atsp.py  tsp_solver_lns_cleanup.py
sw/stem_active_perception/: CMakeLists.txt  package.xml  saliency.jpg.npy
sw/stem_active_perception/src/: att_cloud_gt_2.pcd  attention_map.py  attention_processor.cpp  diffusion_map_gt.cpp  target_att_gt.cpp
sw/stem_bringup/: CMakeLists.txt  package.xml
sw/stem_bringup/config/: amrlab.yaml  debug.perspective  default_params.yaml  earthquake.yaml  fuel_default.yaml  hw.rviz  sim.rviz
sw/stem_bringup/data/: setpoint_vs_act.py
sw/stem_bringup/launch/: fake_fuel.launch  fuel.launch  main.launch  replay.launch  rviz.launch  sim.launch
sw/stem_bringup/models/Radio/meshes/: Radio.dae
sw/stem_bringup/models/aruco_visual_marker_1/: model.sdf
sw/stem_bringup/models/aruco_visual_marker_10/: model.sdf
sw/stem_bringup/models/aruco_visual_marker_11/materials/scripts/: aruco_visual_marker_11_marker.material
sw/stem_bringup/models/aruco_visual_marker_12/: model.sdf
sw/stem_bringup/models/aruco_visual_marker_12/materials/scripts/: aruco_visual_marker_12_marker.material
sw/stem_bringup/models/aruco_visual_marker_13/: model.sdf
sw/stem_bringup/models/aruco_visual_marker_13/materials/scripts/: aruco_visual_marker_13_marker.material
sw/stem_bringup/models/aruco_visual_marker_14/materials/scripts/: aruco_visual_marker_14_marker.material
sw/stem_bringup/models/aruco_visual_marker_15/: model.sdf
sw/stem_bringup/models/aruco_visual_marker_15/materials/scripts/: aruco_visual_marker_15_marker.material
sw/stem_bringup/models/aruco_visual_marker_19/materials/scripts/: aruco_visual_marker_19_marker.material
sw/stem_bringup/models/aruco_visual_marker_2/: model.sdf
sw/stem_bringup/models/aruco_visual_marker_22/: model.sdf
sw/stem_bringup/models/aruco_visual_marker_22/materials/scripts/: aruco_visual_marker_22_marker.material
sw/stem_bringup/models/aruco_visual_marker_23/: model.sdf
sw/stem_bringup/models/aruco_visual_marker_23/materials/scripts/: aruco_visual_marker_23_marker.material
sw/stem_bringup/models/aruco_visual_marker_7/: model.sdf
sw/stem_bringup/models/aruco_visual_marker_8/: model.sdf
sw/stem_bringup/models/camera_fov/: model.config
sw/stem_bringup/models/cave/: model.config  model.sdf
sw/stem_bringup/models/cave2_test/: model.config
sw/stem_bringup/models/climbing rope/: model.sdf
sw/stem_bringup/models/climbing rope/meshes/: rope.dae
sw/stem_bringup/models/dog/: model.config  model.sdf
sw/stem_bringup/models/earthquake/: model.config
sw/stem_bringup/models/earthquake_multi/: model.config
sw/stem_bringup/models/gun/: model.sdf
sw/stem_bringup/models/mantis_depth_vision/: model.config
sw/stem_bringup/models/person_standing/: model.sdf
sw/stem_bringup/models/pillar/: model.sdf
sw/stem_bringup/worlds/: amrlab.world  cave.world  cave_repub.world  earthquake.world  earthquake_vsep.world  urban.world
sw/stem_control/: CMakeLists.txt  package.xml  setup.py
sw/stem_control/src/: control_interface_node.cpp  racer_if.py  teleop_if.py
sw/stem_metrics/: CMakeLists.txt  package.xml
sw/stem_metrics/src/: metrics_node.py
sw/stem_msgs/: CMakeLists.txt  package.xml
sw/stem_planner/: CMakeLists.txt  package.xml  setup.py
sw/stem_planner/src/: mo_tsp_node.py
sw/stem_planner/test/: test_vpt.cpp
sw/stem_semantics/: CMakeLists.txt  package.xml  setup.py
sw/stem_semantics/scripts/semantics/: priorities.py
sw/stem_semantics/src/: object_detection.py  priority_mask.py  priority_mask_vsep.py
sw/stem_semantics/src/stem_semantics/: priorities.py
sw/stem_utils/: CMakeLists.txt  package.xml
sw/stem_utils/include/stem_utils/: camera.h  utils.h
sw/stem_utils/src/: tf_to_topic.cpp
sw/stem_utils/src/geometry/: intrinsic_rotation.py  pose_transformer.cpp
sw/stem_utils/src/perception/: blackmagic_img_pub.cpp  depth_compress.py
sw/stem_utils/src/perception_utils/: camera.cpp
sw/stem_utils/src/simulation/: fake_bag_odom.cpp  fake_localization_node.cpp  gazebo_repub.py  gt_models.cpp  marker_to_pcl.py  mesh_pub.py
sw/stem_utils/test/: test_depth.cpp  test_utils.cpp
(+271 files in other folders)
