<?xml version="1.0"?>
<package format="2">
  <name>stem_active_perception</name>
  <version>0.0.0</version>
  <description>The stem_active_perception package</description>

  <maintainer email="niksethi@tudelft.nl">Nikhil Sethi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>stem_msgs</build_depend>
  <build_depend>plan_env</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>traj_utils</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>stem_msgs</build_export_depend>
  <build_export_depend>plan_env</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>traj_utils</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>stem_msgs</exec_depend>
  <exec_depend>plan_env</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>traj_utils</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  
  <depend>stem_utils</depend>

</package>
