cmake_minimum_required(VERSION 3.0.2)
project(stem_bringup)


find_package(catkin REQUIRED)

## DEPENDS: system dependencies of this project that dependent projects also need
catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES stem_bringup
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)
