<?xml version="1.0"?>
<package format="2">
  <name>stem_bringup</name>
  <version>0.0.0</version>
  <description>The stem_bringup package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="niksethi@tudelft.nl">Nikhil Sethi</maintainer>

  <license>TODO</license>
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Stem semantics -->
  <exec_depend>semantics</exec_depend>

  <!-- Stem active perception -->
  <exec_depend>exploration_manager</exec_depend>

  <!-- Stem Planning -->
  <exec_depend>plan_manage</exec_depend>
  <exec_depend>target_search</exec_depend>
  <exec_depend>waypoint_generator</exec_depend>

  <!-- Control -->
  <exec_depend>px4</exec_depend>
  <exec_depend>control_interface</exec_depend>
  <exec_depend>px4_tools</exec_depend>
  
  <!-- Misc -->
  <exec_depend>fake_localization</exec_depend>
  <exec_depend>img_utils</exec_depend>
  <exec_depend>metrics</exec_depend>


</package>
